Fixed bug #70207 (Finally is broken with opcache)